# SyMon

./: .clang-format  .dir-locals.el  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  Doxyfile.in  README.md  index.html  sitemap.xml
.circleci/: config.yml
.github/workflows/: boosttest.yml  deploy-docs.yml  docker-deploy.yml  integrated_test.yml
bats/: symon.bats
cmake/Modules/: FindPPL.cmake
docker/: Dockerfile
docs/: mkdocs.yml
docs/src/: examples.md  getting_started.md  index.md  install.md  publications.md  syntax.md  tools.md
example/: constant_string_assignment.symon  decimal_inputs.symon  decimal_inputs2.symon  decimal_time_boolean.symon  decimal_time_data_parametric.symon  decimal_time_parametric.symon  expr_assignment.symon  expr_assignment2.symon  features.symon  features2.symon  inits.symon  unobservable2_boolean.symon  unobservable2_data_parametric.symon  unobservable_boolean.symon  unobservable_data_parametric.symon
example/cav2019/: README.md  copy.dot  copy.sig  dominant.dot  dominant.sig  periodic.dot  periodic.sig
example/copy/: README.md  copy-block.symon  copy.boolean.result  copy.data_parametric.result  copy.dot  copy.symon  copy.txt  copy_data_parametric.dot  copy_parametric.dot  copy_parametric.result  copy_tpm.dot  copy_tpm.result
example/exim4/: .gitignore
example/exim4/frequent/: Makefile  README.md  convert_log.py  frequent.org  frequent.symon  pretty_print.sh
example/exim4/relay/: Makefile  README.md  convert_log.py  pretty_print.sh  relay.org  relay.symon
example/non_integer/: boolean.symon  dataparametric.symon  parametric.symon
example/periodic/: periodic.org  periodic.symon  pretty_print.sh
example/simpleCopy/: simpleCopy.dot  simpleCopy.sig  simpleCopy.txt  simpleCopyInterval.dot  simpleCopyInterval_20.dot  simpleCopyInterval_200.dot  simpleCopyInterval_2000.dot  simpleCopyInterval_200n.dot  simpleCopyInterval_200s.dot
example/symbolic/: symbolic.dot  symbolic.sig  symbolic.txt
example/withdraw/: README.md  withdraw.dot  withdraw.symon  withdraw.txt  withdraw_parametric.dot
examples/: index.html
getting_started/: index.html
hook/: check-cmake-format.sh
install/: index.html
publications/: index.html
search/: search_index.json
src/: automata_operation.hh  automaton.hh  automaton_parser.hh  boolean_monitor.hh  common_types.hh  data_parametric_monitor.hh  io_operators.hh  main.cc  non_symbolic_number_constraint.hh  non_symbolic_string_constraint.hh  non_symbolic_update.hh  observer.hh  parametric_monitor.hh  parametric_timing_constraint.hh  parametric_timing_constraint_helper.hh  ppl_rational.hh  printer.hh  signature.hh  subject.hh  symbolic_number_constraint.hh  symbolic_string_constraint.hh  symbolic_update.hh  symon_parser.hh  timed_word_parser.hh  timed_word_subject.hh  timing_constraint.hh
syntax/: index.html
test/: automaton_deep_copy_test.cc  automaton_operation_test.cc  automaton_parser_test.cc  boolean_monitor_test.cc  data_parametric_monitor_test.cc  io_operators_test.cc  non_symbolic_string_constraint_test.cc  non_symbolic_update_test.cc  parametric_monitor_test.cc  parametric_timing_constraint_helper_test.cc  parametric_timing_constraint_test.cc  ppl_rational_test.cc  pta_parser_test.cc  signature_test.cc  symbolic_string_constraint_test.cc  symbolic_update_test.cc  symon_parser_test.cc  timed_word_parser_test.cc  timing_constraint_test.cc
test/fixture/: copy_automaton_fixture.hh  decimal_expression_fixture.hh  epsilon_transition_automaton_fixture.hh  non_integer_timestamp_fixture.hh  star_automaton_fixture.hh  time_restriction_automaton_fixture.hh  withdraw_automaton_fixture.hh
tools/: index.html
